--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(archiver
-    main.cpp priority_queue/priority_queue.h priority_queue/tests/priority_queue_tests.cpp reader/reader.cpp reader/reader.h reader/tests/reader_tests.cpp writer/writer.cpp writer/writer.h writer/tests/writer_tests.cpp)
+    main.cpp priority_queue/priority_queue.h priority_queue/tests/priority_queue_tests.cpp reader/reader.cpp reader/reader.h reader/tests/reader_tests.cpp writer/writer.cpp writer/writer.h writer/tests/writer_tests.cpp archiver.cpp archiver.h)
