compressor without tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,28 @@
 cmake_minimum_required(VERSION 2.8)
-project(Archiver)
+project(archiver)
 
-add_executable(archiver
-    main.cpp trie/trie.cpp trie/trie.h priority_queue/priority_queue.h priority_queue/tests/priority_queue_tests.cpp reader/reader.cpp reader/reader.h reader/tests/reader_tests.cpp writer/writer.cpp writer/writer.h writer/tests/writer_tests.cpp archiver.cpp archiver.h)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall")
 
+add_executable(MAIN main.cpp)
+
+add_library(ARCHIVER archiver/archiver.cpp)
+add_library(READER reader/reader.cpp)
+add_library(WRITER writer/writer.cpp)
+add_library(TRIE trie/trie.cpp)
+
+target_link_libraries(MAIN ARCHIVER READER WRITER TRIE)
+
+## Setup testing
+#link_directories(/usr/local/lib)
+#
+#enable_testing()
+#find_package(GTest REQUIRED)
+#include_directories(${GTEST_INCLUDE_DIR})
+#
+#add_custom_target(tests COMMAND GTEST_COLOR=yes ${CMAKE_CTEST_COMMAND} --verbose)
+#
+#file(GLOB TEST_FILES "tests/*.cpp")
+#add_executable("archiver_tests" EXCLUDE_FROM_ALL ${TEST_FILES})
+#target_link_libraries("archiver_tests" gtest pthread ARCHIVER)
+#add_dependencies(tests "archiver_tests")
+#add_test("archiver_tests" "./archiver_tests")
