--- a/archiver/CMakeLists.txt
+++ b/archiver/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Archiver)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall")
 
-add_library(ARCHIVER archiver.cpp)
+add_library(ARCHIVER compressor.cpp)
