--- a/archiver/CMakeLists.txt
+++ b/archiver/CMakeLists.txt
@@ -3,8 +3,7 @@ project(Archiver)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall")
 
-add_library(COMPRESSOR compressor.cpp)
-add_library(DECOMPRESSOR compressor.cpp)
+add_library(ARCHIVER archiver.cpp compressor.cpp decompressor.cpp)
 
 # Setup testing
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/tests/mock DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
@@ -15,10 +14,10 @@ enable_testing()
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIR})
 
-add_custom_target(tests COMMAND GTEST_COLOR=yes ${CMAKE_CTEST_COMMAND} --verbose)
+add_custom_target(test_archiver COMMAND GTEST_COLOR=yes ${CMAKE_CTEST_COMMAND} --verbose)
 
 file(GLOB TEST_FILES "tests/*.cpp")
-add_executable("reader_tests" EXCLUDE_FROM_ALL ${TEST_FILES})
-target_link_libraries("reader_tests" gtest pthread READER)
-add_dependencies(tests "reader_tests")
-add_test("reader_tests" "./reader_tests")
+add_executable("run_test_archiver" EXCLUDE_FROM_ALL ${TEST_FILES})
+target_link_libraries("run_test_archiver" gtest pthread ARCHIVER)
+add_dependencies(test_archiver "run_test_archiver")
+add_test("archiver_tests" "./archiver_tests")
