--- a/writer/CMakeLists.txt
+++ b/writer/CMakeLists.txt
@@ -14,10 +14,10 @@ enable_testing()
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIR})
 
-add_custom_target(writer_tests COMMAND GTEST_COLOR=yes ${CMAKE_CTEST_COMMAND} --verbose)
+add_custom_target(test_writer COMMAND GTEST_COLOR=yes ${CMAKE_CTEST_COMMAND} --verbose)
 
 file(GLOB TEST_FILES "tests/*.cpp")
-add_executable("writer_tests" EXCLUDE_FROM_ALL ${TEST_FILES})
-target_link_libraries("writer_tests" gtest pthread WRITER)
-add_dependencies(tests "writer_tests")
+add_executable("run_test_writer" EXCLUDE_FROM_ALL ${TEST_FILES})
+target_link_libraries("run_test_writer" gtest pthread WRITER)
+add_dependencies(test_writer "run_test_writer")
 add_test("writer_tests" "./writer_tests")
