--- a/reader/CMakeLists.txt
+++ b/reader/CMakeLists.txt
@@ -14,10 +14,10 @@ enable_testing()
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIR})
 
-add_custom_target(reader_tests COMMAND GTEST_COLOR=yes ${CMAKE_CTEST_COMMAND} --verbose)
+add_custom_target(test_reader COMMAND GTEST_COLOR=yes ${CMAKE_CTEST_COMMAND} --verbose)
 
 file(GLOB TEST_FILES "tests/*.cpp")
-add_executable("reader_tests" EXCLUDE_FROM_ALL ${TEST_FILES})
-target_link_libraries("reader_tests" gtest pthread READER)
-add_dependencies(tests "reader_tests")
+add_executable("run_test_reader" EXCLUDE_FROM_ALL ${TEST_FILES})
+target_link_libraries("run_test_reader" gtest pthread READER)
+add_dependencies(test_reader "run_test_reader")
 add_test("reader_tests" "./reader_tests")
