--- a/priority_queue/CMakeLists.txt
+++ b/priority_queue/CMakeLists.txt
@@ -3,8 +3,6 @@ project(PriorityQueue)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall")
 
-#add_library(PRIORITY_QUEUE priority_queue.h)
-
 # Setup testing
 link_directories(/usr/local/lib)
 
@@ -15,7 +13,7 @@ include_directories(${GTEST_INCLUDE_DIR})
 add_custom_target(tests COMMAND GTEST_COLOR=yes ${CMAKE_CTEST_COMMAND} --verbose)
 
 file(GLOB TEST_FILES "tests/*.cpp")
-add_executable("priority_queue_tests" EXCLUDE_FROM_ALL ${TEST_FILES})
-target_link_libraries("priority_queue_tests" gtest pthread)
-add_dependencies(tests "priority_queue_tests")
-add_test("priority_queue_tests" "./priority_queue_tests")
+add_executable("test_priority_queue" EXCLUDE_FROM_ALL ${TEST_FILES})
+target_link_libraries("test_priority_queue" gtest pthread)
+add_dependencies(test_priority_queue "test_priority_queue")
+add_test("test_priority_queue" "./test_priority_queue")
