changed readme.md, changed help language to English, build.sh now can build in debug mode if --debug is used (default is release), basic benchmarks sh script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,24 +5,14 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall")
 
 add_executable(archiver.sh main.cpp)
 
+add_subdirectory(./reader/)
+add_subdirectory(./writer/)
+add_subdirectory(./archiver/)
+add_subdirectory(./trie/)
+add_subdirectory(./utils/)
+add_subdirectory(./priority_queue)
 
-if (NOT TARGET READER)
-    add_subdirectory(./reader/)
-endif()
-if (NOT TARGET WRITER)
-    add_subdirectory(./writer/)
-endif()
-if (NOT TARGET ARCHIVER)
-    add_subdirectory(./archiver/)
-endif()
-if (NOT TARGET TRIE)
-    add_subdirectory(./trie/)
-endif()
-if (NOT TARGET UTILS)
-    add_subdirectory(./utils/)
-endif()
-
-target_link_libraries(archiver.sh ARCHIVER READER WRITER TRIE UTILS)
+target_link_libraries(archiver.sh lib_archiver lib_reader lib_writer lib_trie lib_utils)
 
 # Setup testing
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/tests/mock DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
@@ -30,12 +20,7 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/tests/mock DESTINATION ${CMAKE_CURRENT_BIN
 link_directories(/usr/local/lib)
 
 enable_testing()
-find_package(GTest REQUIRED)
-include_directories(${GTEST_INCLUDE_DIR})
 
-file(GLOB TEST_FILES "tests/*.cpp")
-add_executable("test_all" EXCLUDE_FROM_ALL ${TEST_FILES})
-target_link_libraries("test_all" gtest pthread ARCHIVER READER WRITER TRIE UTILS)
-add_dependencies("test_all" "test_all")
-add_test("test_all" "test_all")
+add_custom_target("test_all")
+add_test("test_all" run_test_archiver run_test_writer run_test_reader run_test_priority_queue)
 
