--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Utils)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall")
 
-add_library(UTILS command_line_arguments_parser.cpp extract_filename.cpp)
+add_library(lib_utils command_line_arguments_parser.cpp extract_filename.cpp)
