--- a/writer/CMakeLists.txt
+++ b/writer/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Writer)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall")
 
-add_library(WRITER writer.cpp)
+add_library(lib_writer writer.cpp)
 
 # Setup testing
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/tests/mock DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
@@ -15,6 +15,8 @@ find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIR})
 
 file(GLOB TEST_FILES "tests/*.cpp")
+#add_custom_target("build_test_writer" COMMAND GTEST_COLOR=yes ${CMAKE_CTEST_COMMAND} --verbose)
 add_executable("test_writer" EXCLUDE_FROM_ALL ${TEST_FILES})
-target_link_libraries("test_writer" gtest pthread WRITER)
-add_test("test_writer" "test_writer")
+target_link_libraries("test_writer" gtest pthread lib_writer)
+#add_dependencies(build_test_writer "test_writer")
+add_test("test_writer" "./test_writer")
