A lot of changes: Created virtual BaseReader/BaseWriter classes and inherited from them FileReader/FileWriter. Refactored many functions so they are cleaner now. Some bugs are still not fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ add_executable(archiver.sh main.cpp)
 add_subdirectory(./reader/)
 add_subdirectory(./writer/)
 add_subdirectory(./archiver/)
-add_subdirectory(./trie/)
+add_subdirectory(binary_trie/)
 add_subdirectory(./utils/)
 add_subdirectory(./priority_queue)
 
