--- a/binary_trie/CMakeLists.txt
+++ b/binary_trie/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Trie)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall")
 
-add_library(lib_trie trie.cpp)
+add_library(lib_trie binary_trie.cpp)
