moved all tests to root folder & refactored cmakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,10 @@ add_executable(archiver.sh main.cpp)
 add_subdirectory(./reader/)
 add_subdirectory(./writer/)
 add_subdirectory(./archiver/)
-add_subdirectory(binary_trie/)
+add_subdirectory(./binary_trie/)
 add_subdirectory(./utils/)
-add_subdirectory(./priority_queue)
 
-target_link_libraries(archiver.sh lib_archiver lib_reader lib_writer lib_trie lib_utils)
+target_link_libraries(archiver.sh lib_archiver lib_reader lib_writer lib_binary_trie lib_utils)
 
 # Setup testing
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/tests/mock DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
@@ -20,7 +19,26 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/tests/mock DESTINATION ${CMAKE_CURRENT_BIN
 link_directories(/usr/local/lib)
 
 enable_testing()
+find_package(GTest REQUIRED)
+include_directories(${GTEST_INCLUDE_DIR})
 
-add_custom_target("test_all")
-add_test("test_all" run_test_archiver run_test_writer run_test_reader run_test_priority_queue)
+set(TESTS_FOLDER "tests")
 
+add_executable("test_reader" ${TESTS_FOLDER}/reader_tests.cpp)
+target_link_libraries("test_reader" gtest pthread lib_reader)
+add_test("test_reader" "./test_reader")
+
+add_executable("test_writer" ${TESTS_FOLDER}/writer_tests.cpp)
+target_link_libraries("test_writer" gtest pthread lib_writer)
+add_test("test_writer" "./test_writer")
+
+add_executable("test_priority_queue" ${TESTS_FOLDER}/priority_queue_tests.cpp)
+target_link_libraries("test_priority_queue" gtest pthread)
+add_test("test_priority_queue" "./test_priority_queue")
+
+add_executable("test_archiver" ${TESTS_FOLDER}/archiver_tests.cpp)
+target_link_libraries("test_archiver" gtest pthread lib_archiver lib_utils lib_reader lib_writer lib_binary_trie)
+add_test("test_archiver" "./test_archiver")
+
+add_custom_target(test_all COMMAND test_archiver COMMAND test_priority_queue COMMAND test_writer COMMAND test_reader)
+add_test("test_all" "./test_all")
