--- a/binary_trie/CMakeLists.txt
+++ b/binary_trie/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
-project(Trie)
+project(BinaryTrie)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall")
 
-add_library(lib_trie binary_trie.cpp)
+add_library(lib_binary_trie binary_trie.cpp)
